--- a/story1.html
+++ b/story1.html
@@ -1,5 +1,3 @@
-http://bryanmurley.com/3703images/iraq.jpg
-
 Cutline: U.S. Marine Corps Lance Cpl. Jose F. Rivera provides landing zone security for Marine CH-53D Sea Stallion helicopters during an Aero Scout training operation near Al Asad, Iraq, on Aug. 20, 2007. Rivera is attached to Regimental Combat Team 2.   DoD photo by Lance Cpl. Charles S. Howard, U.S. Marine Corps. (Department of Defense photo)
 
 Head: Bush Wants $50 Billion More for Iraq War
@@ -9,7 +7,7 @@ Subhead: Planned Request Signals Confidence That Congress Won't Prevail on Pullo
 Byline: By Thomas E. Ricks
 Washington Post Staff Writer
 Wednesday, August 29, 2007; A01
-
+<img src="http://bryanmurley.com/3703images/iraq.jpg"
 President Bush plans to ask Congress next month for up to $50 billion in additional funding for the war in Iraq, a White House (https://www.whitehouse.gov/) official said yesterday, a move that appears to reflect increasing administration confidence that it can fend off congressional calls for a rapid drawdown of U.S. forces.
 
 The request -- which would come on top of about $460 billion in the fiscal 2008 defense budget and $147 billion in a pending supplemental bill to fund the wars in Afghanistan and Iraq -- is expected to be announced after congressional hearings scheduled for mid-September featuring the two top U.S. officials in Iraq. Army Gen. David H. Petraeus and Ambassador Ryan C. Crocker will assess the state of the war and the effect of the new strategy the U.S. military (http://www.defense.gov/) has pursued this year.
