--- a/story1.html
+++ b/story1.html
@@ -1,19 +1,40 @@
-Cutline: U.S. Marine Corps Lance Cpl. Jose F. Rivera provides landing zone security for Marine CH-53D Sea Stallion helicopters during an Aero Scout training operation near Al Asad, Iraq, on Aug. 20, 2007. Rivera is attached to Regimental Combat Team 2.   DoD photo by Lance Cpl. Charles S. Howard, U.S. Marine Corps. (Department of Defense photo)
+<!Doctype html>
+<lang= "en">
+<head>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<title>Bush Wants More for Iraq War</title>
+</head>
+<body>
+<h2>Bush Wants $50 Billion More for Iraq War</h2>
+<h3>Planned Request Signals Confidence That Congress Won't Prevail on Pullout</h3>
 
-Head: Bush Wants $50 Billion More for Iraq War
-
-Subhead: Planned Request Signals Confidence That Congress Won't Prevail on Pullout
-
-Byline: By Thomas E. Ricks
+<h4 class="byline"> By Thomas E. Ricks
+<br/>
 Washington Post Staff Writer
+<br/>
 Wednesday, August 29, 2007; A01
-<img src="http://bryanmurley.com/3703images/iraq.jpg"
-President Bush plans to ask Congress next month for up to $50 billion in additional funding for the war in Iraq, a White House (https://www.whitehouse.gov/) official said yesterday, a move that appears to reflect increasing administration confidence that it can fend off congressional calls for a rapid drawdown of U.S. forces.
+</h4>
 
-The request -- which would come on top of about $460 billion in the fiscal 2008 defense budget and $147 billion in a pending supplemental bill to fund the wars in Afghanistan and Iraq -- is expected to be announced after congressional hearings scheduled for mid-September featuring the two top U.S. officials in Iraq. Army Gen. David H. Petraeus and Ambassador Ryan C. Crocker will assess the state of the war and the effect of the new strategy the U.S. military (http://www.defense.gov/) has pursued this year.
+<figure>
+<img src="http://bryanmurley.com/3703images/iraq.jpg">
+<figcaption>U.S. Marine Corps Lance Cpl. Jose F. Rivera provides landing zone security for Marine CH-53D Sea Stallion helicopters during an Aero Scout training operation near Al Asad, Iraq, on Aug. 20, 2007. Rivera is attached to Regimental Combat Team 2.   DoD photo by Lance Cpl. Charles S. Howard, U.S. Marine Corps. (Department of Defense photo)</figcaption>
+</figure>
 
-The request is being prepared now in the belief that Congress will be unlikely to balk so soon after hearing the two officials argue that there are promising developments in Iraq but that they need more time to solidify the progress they have made, a congressional aide said.
+<p>President Bush plans to ask Congress next month for up to $50 billion in additional funding for the war in Iraq, a <a href="https://www.whitehouse.gov/"> White House </a> official said yesterday, a move that appears to reflect increasing administration confidence that it can fend off congressional calls for a rapid drawdown of U.S. forces.
+</p>
 
-Most of the additional funding in a revised supplemental bill would pay for the current counteroffensive in Iraq, which has expanded the U.S. force there by about 28,000 troops, to about 160,000. The cost of the buildup was not included in the proposed 2008 budget because Pentagon officials said they did not know how long the troop increase would last. The decision to seek about $50 billion more appears to reflect the view in the administration that the counteroffensive will last into the spring of 2008 and will not be shortened by Congress.
+<p>The request -- which would come on top of about $460 billion in the fiscal 2008 defense budget and $147 billion in a pending supplemental bill to fund the wars in Afghanistan and Iraq -- is expected to be announced after congressional hearings scheduled for mid-September featuring the two top U.S. officials in Iraq. Army Gen. David H. Petraeus and Ambassador Ryan C. Crocker will assess the state of the war and the effect of the new strategy the <a href="http://www.defense.gov/">U.S. military</a> has pursued this year.
+</p>
 
-Some consideration is being given to trimming the new request by a few billion dollars, the White House official said. But, he added, "this is pretty close to a done deal." Almost all the spending is relatively noncontroversial, he added, with the vast majority of it necessary just to keep the U.S. military operating in Iraq. The official, who spoke on the condition of anonymity because he is not authorized to talk to reporters, said that the supplemental requests are likely to be "rolled together" and considered as one package.
+<p>The request is being prepared now in the belief that Congress will be unlikely to balk so soon after hearing the two officials argue that there are promising developments in Iraq but that they need more time to solidify the progress they have made, a congressional aide said.
+</p>
+
+<p>Most of the additional funding in a revised supplemental bill would pay for the current counteroffensive in Iraq, which has expanded the U.S. force there by about 28,000 troops, to about 160,000. The cost of the buildup was not included in the proposed 2008 budget because Pentagon officials said they did not know how long the troop increase would last. The decision to seek about $50 billion more appears to reflect the view in the administration that the counteroffensive will last into the spring of 2008 and will not be shortened by Congress.
+</p>
+
+<p>Some consideration is being given to trimming the new request by a few billion dollars, the White House official said. But, he added, "this is pretty close to a done deal." Almost all the spending is relatively noncontroversial, he added, with the vast majority of it necessary just to keep the U.S. military operating in Iraq. The official, who spoke on the condition of anonymity because he is not authorized to talk to reporters, said that the supplemental requests are likely to be "rolled together" and considered as one package.
+</p>
+
+<h3><a href="story2.html">NEXT PAGE</a></h3>
+</body>
+</html>
