--- a/story2.html
+++ b/story2.html
@@ -1,21 +1,45 @@
-http://bryanmurley.com/3703images/bush.jpg
+<!DOCTYPE html>
+<lang= "en">
+<head>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<title>Bush Wants More for Iraq War Contd.</title>
+</head>
+<body>
+<h3><a href="story1.html">PREVIOUS</a></h3>
+<figure>
+<img src="http://bryanmurley.com/3703images/bush.jpg" width="400px" height="300px">
+<figcaption>
+President George W. Bush, speaking to members of the media Monday, Aug. 27, 2007 on the tarmac of Kirtland Air Force Base, New Mexico, praised Iraqi leaders for agreeing to establish new power-sharing agreements, their commitment to support political initiatives, and advances agreement among Iraq's leadership on several key legislative benchmarks. White House photo by Chris Greenberg
+</figcaption>
+</figure>
 
-Cutline Image 2: President George W. Bush, speaking to members of the media Monday, Aug. 27, 2007 on the tarmac of Kirtland Air Force Base, New Mexico, praised Iraqi leaders for agreeing to establish new power-sharing agreements, their commitment to support political initiatives, and advances agreement among Iraq's leadership on several key legislative benchmarks. White House photo by Chris Greenberg
+<p>The revised supplemental would total about $200 billion, indicating that the cost of the war in Iraq now exceeds $3 billion a week. The bill also covers the far smaller costs of the war in Afghanistan. The Pentagon said recently that the cost of the Iraq war has surpassed $330 billion, while the war in Afghanistan has cost $78 billion.
+</p>
 
-Continued from previous page
+<blockquote>"We have said previously that after General Petraeus reports, we will be evaluating what adjustments may need to be made to our pending [fiscal 2008] supplemental request, which was sent up in February with the rest of the budget," White House spokesman Gordon Johndroe said last night. "I'm going to decline to speculate on this, as General Petraeus has not testified. Nor have any decisions been made at this stage about whether, when or what specific changes could be made."
+</blockquote>
 
-The revised supplemental would total about $200 billion, indicating that the cost of the war in Iraq now exceeds $3 billion a week. The bill also covers the far smaller costs of the war in Afghanistan. The Pentagon said recently that the cost of the Iraq war has surpassed $330 billion, while the war in Afghanistan has cost $78 billion.
+<p>A House Appropriations Committee aide said that an additional White House spending request has been anticipated but that it was expected to be far smaller, perhaps about $30 billion.
+</p> 
+<p>"We haven't seen the details, but we'll give it the scrutiny it deserves," said Jim Manley, a spokesman for Senate Majority Leader Harry M. Reid (D-Nev.). "It's long past time for giving blank checks to the administration."
+</p>
 
-"We have said previously that after General Petraeus reports, we will be evaluating what adjustments may need to be made to our pending [fiscal 2008] supplemental request, which was sent up in February with the rest of the budget," White House spokesman Gordon Johndroe said last night. "I'm going to decline to speculate on this, as General Petraeus has not testified. Nor have any decisions been made at this stage about whether, when or what specific changes could be made."
+<p>Despite widespread media anticipation of next month's Iraq hearings, Pentagon insiders say they do not expect them to result in any major changes in military strategy. The sessions are expected to occur the week of Sept. 10, with Petraeus and Crocker appearing before a total of four committees in the House and Senate.
+</p>
 
-A House Appropriations Committee aide said that an additional White House spending request has been anticipated but that it was expected to be far smaller, perhaps about $30 billion. "We haven't seen the details, but we'll give it the scrutiny it deserves," said Jim Manley, a spokesman for Senate Majority Leader Harry M. Reid (D-Nev.). "It's long past time for giving blank checks to the administration."
+<p>"I don't see any surprises" coming out of the hearings, said an officer on the staff of the Joint Chiefs of Staff. He said he expects Petraeus and Crocker to focus on tactical security gains in and around Baghdad in recent months and on shifts in tribal allegiances in favor of U.S. forces, and to argue that those improvements may open a window for greater political reconciliation in Iraq over the next six or seven months.
+</p>
 
-Despite widespread media anticipation of next month's Iraq hearings, Pentagon insiders say they do not expect them to result in any major changes in military strategy. The sessions are expected to occur the week of Sept. 10, with Petraeus and Crocker appearing before a total of four committees in the House and Senate.
+<p>In any event, this officer said, he expects the current counteroffensive to be maintained into next April. 
+</p>
+<p>"The surge was designed to last for a year," he said. "I don't think they'll change that."
+</p>
 
-"I don't see any surprises" coming out of the hearings, said an officer on the staff of the Joint Chiefs of Staff. He said he expects Petraeus and Crocker to focus on tactical security gains in and around Baghdad in recent months and on shifts in tribal allegiances in favor of U.S. forces, and to argue that those improvements may open a window for greater political reconciliation in Iraq over the next six or seven months.
-
-In any event, this officer said, he expects the current counteroffensive to be maintained into next April. "The surge was designed to last for a year," he said. "I don't think they'll change that."
-
-In a speech yesterday to the convention of the American Legion in Reno, Nev., Bush gave an optimistic assessment of recent events in the war, now in its fifth year. "There are unmistakable signs that our strategy is achieving the objectives we set out," he said. "The momentum is now on our side."
-
-Staff writers Jonathan Weisman and Karen DeYoung contributed to this report.
+<p>In a speech yesterday to the convention of the American Legion in Reno, Nev., Bush gave an optimistic assessment of recent events in the war, now in its fifth year. 
+</p>
+<p>"There are unmistakable signs that our strategy is achieving the objectives we set out," he said. "The momentum is now on our side."
+</p>
+<p>Staff writers Jonathan Weisman and Karen DeYoung contributed to this report.
+</p>
+</body>
+</html>
